src/objects/Quality_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager_Name__c</fullName>
        <description>Account Manager Name</description>
        <label>Account Manager Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name (text)</description>
        <inlineHelpText>Account Name</inlineHelpText>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <inlineHelpText>Account Type / Segment</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
                <value>
                    <fullName>STRATEGIC</fullName>
                </value>
                <value>
                    <fullName>PARTNER</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quality Survey</relationshipLabel>
        <relationshipName>Quality_Survey</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Best_Supplier_Incoming_Quality__c</fullName>
        <description>Incoming quality to OEM</description>
        <inlineHelpText>Incoming quality to OEM of BEST SUPPLIER (absolute value of line rejects)</inlineHelpText>
        <label>Best Supplier Incoming Quality to OEM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Supplier_Reliability__c</fullName>
        <description>Reliability in the field (#/PPM of (valid) field rejects)</description>
        <inlineHelpText>Reliability in the field of BEST SUPPLIER  (#/PPM of (valid) field rejects)</inlineHelpText>
        <label>Best Supplier Reliability in Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Supplier_Root_Cause_Determination__c</fullName>
        <description>Cycle time to root cause determination of your BEST SUPPLIER (determination of mechanism and corrective action plan)</description>
        <inlineHelpText>Cycle time to root cause determination of BEST SUPPLIER (determination of mechanism and corrective action plan)</inlineHelpText>
        <label>Best Supplier Root Cause Determination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chemical_Content_Information__c</fullName>
        <description>Chemical content information (IMDS, IPC1752, REACH/RoHS certification)</description>
        <inlineHelpText>Chemical content information (IMDS, IPC1752, REACH/RoHS certification)</inlineHelpText>
        <label>Chemical Content Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_Product_Quality__c</fullName>
        <description>Customer Comments</description>
        <label>Comments Product Quality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Service_Quality_1__c</fullName>
        <description>Customer Comments</description>
        <label>Comments Service Quality 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Service_Quality_2__c</fullName>
        <description>Customer Comments</description>
        <label>Comments Service Quality 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Level__c</fullName>
        <description>Contact Level</description>
        <inlineHelpText>Contact Level</inlineHelpText>
        <label>Contact Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Location__c</fullName>
        <description>Contact Location</description>
        <inlineHelpText>Contact Location</inlineHelpText>
        <label>Contact Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quality Survey</relationshipLabel>
        <relationshipName>Quality_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuous_Improvement__c</fullName>
        <description>Demonstration of continuous improvement (periodic reviews showing continuous quality improvement plans and roadmaps for sites, products and technologies</description>
        <inlineHelpText>Demonstration of continuous improvement (periodic reviews showing continuous quality improvement plans and roadmaps for sites, products and technologies</inlineHelpText>
        <label>Continuous Improvement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_survey_submitted_to_SF__c</fullName>
        <inlineHelpText>Date survey submitted will be same for all Historic Survey Monkey data that got passed over.</inlineHelpText>
        <label>Date survey submitted to SF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incoming_Quality__c</fullName>
        <description>Incoming quality to Tier One (#/PPM of (valid) line rejects)</description>
        <inlineHelpText>Incoming quality to Tier One (#/PPM of (valid) line rejects)</inlineHelpText>
        <label>Incoming Quality to Tier One</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoming_Quality_to_OEM__c</fullName>
        <description>Incoming quality to OEM (valid) 0km rejects)</description>
        <inlineHelpText>Incoming quality to OEM (valid) 0km rejects)</inlineHelpText>
        <label>Incoming Quality to OEM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Complaint__c</fullName>
        <description>Cycle time to your initial complaint (acknowledgement of issue)</description>
        <inlineHelpText>Cycle time to your initial complaint (acknowledgement of issue)</inlineHelpText>
        <label>Intial_Complaint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_email__c</fullName>
        <label>Account Manager Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPAP_PSW_Qual_Packs__c</fullName>
        <description>PPAP/PSW/Qual Packs</description>
        <inlineHelpText>PPAP/PSW/Qual Packs</inlineHelpText>
        <label>PPAP/PSW/Qual Packs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Excursions_and_Incidences__c</fullName>
        <description>Quality excursions and incidences (number of incidences requiring major mobilization of resources)</description>
        <inlineHelpText>Quality excursions and incidences (number of incidences requiring major mobilization of resources)</inlineHelpText>
        <label>Quality Excursions and Incidences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_of_Complaint_Resolution__c</fullName>
        <description>Overall quality of the resolution of your complaint.</description>
        <inlineHelpText>Overall quality of the resolution of your complaint.</inlineHelpText>
        <label>Quality of Complaint Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Region</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMEC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reject_Analysis_Reporting__c</fullName>
        <description>Reject analysis reporting (8D)</description>
        <inlineHelpText>Reject analysis reporting (8D)</inlineHelpText>
        <label>Reject Analysis Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reliability_in_Field__c</fullName>
        <description>Reliability in the field (#/PPM of (valid) field rejects)</description>
        <inlineHelpText>Reliability in the field (#/PPM of (valid) field rejects)</inlineHelpText>
        <label>Reliability in Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Cause_Determination__c</fullName>
        <description>Cycle time to root cause determination (determination of mechanism and corrective action plan)</description>
        <inlineHelpText>Cycle time to root cause determination (determination of mechanism and corrective action plan)</inlineHelpText>
        <label>Root Cause Determination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POOR</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>VERY GOOD</fullName>
                </value>
                <value>
                    <fullName>EXCELLENT</fullName>
                </value>
                <value>
                    <fullName>DON&apos;T KNOW/NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quality Survey</label>
    <nameField>
        <label>Quality Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>